[B]Version 0.0.1[/B]
- Initial Release.
[B]Version 1.0.3[/B]
- Support for headers.
[B]Version 1.0.4[/B]
- Some more fixes
[B]Version 1.0.6[/B]
- now its working with querystring
[B]Version 1.0.7[/B]
- headbug
[B]Version 1.0.8[/B]
- proxysetup
[B]Version 1.0.10[/B]
- bitrate support
[B]Version 1.0.12[/B]
- added support recorded streams
[B]Version 1.0.13[/B]
- code reformating and failed attempt for seek
[B]Version 1.0.14[/B]
- disable seek
[B]Version 1.0.16[/B]
- Support for nested manifest, thanks to the-one
[B]Version 1.0.17[/B]
- wrong xml quick fix from http://streamer11.elementssys.com:8080/albadawiyah-800-hdsx/archive/1400941159/now/manifest.f4m
[B]Version 1.0.18[/B]
- support for no meta data manifest like http://olystreameast.nbcolympics.com/vod/157717c8-9c74-4fd1-ab1a-7daca5246324/geo1-lucas-oil-pro-motocross0531120959-ua.ism/manifest(format=f4m-f4f).f4m
[B]Version 2.0.0[/B]
- support for simpledownloader. This is just any file which needs downloading so that xbmc can play, which is failing because of range xbmc is trying
[B]Version 2.0.1[/B]
small bug
[B]Version 2.0.2[/B]
another small bug
[B]Version 2.0.3[/B]
finall small bug solved :)

[B]Version 2.1.0[/B]
simple_dowloader now support bitrate which is currently only used for bein hd links
[B]Version 2.1.1[/B]
small change so that its visible inside the repo
[B]Version 2.1.2[/B]
support for Auth Param
[B]Version 2.1.3[/B]
fix auth param in qs
[B]Version 2.1.4[/B]
HLS DRM Support
[B]Version 2.1.6[/B]
HLS non enc speed supported
[B]Version 2.1.7[/B]
support setresolved param
[B]Version 2.1.8[/B]
Query string problem
[B]Version 2.1.9[/B]
Query string problem

[B]Version 2.2.0[/B]
Fixed for BBC, now picking up last fragement of last segment
[B]Version 2.2.2[/B]
updated the retry

[B]Version 2.2.3[/B]
added akhds support for tag decrypt and pvtoken

[B]Version 2.2.4[/B]
removed crypto reference

[B]Version 2.2.5[/B]
small bug

[B]Version 2.2.6[/B]
support local copy of pycrypto
