@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="script.video.F4mProxy" 
 	     name="F4mProxy" 
-	     version="2.2.6" 
+	     version="2.2.7" 
 	     provider-name="Shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0" />
