@@ -1,4 +1,3 @@
-
 import base64
 from struct import unpack, pack
 import sys
@@ -18,31 +17,78 @@ import zlib
 from hashlib import sha256, sha1,md5,sha512
 import cookielib
 import array
+import socket
+from multiprocessing.connection import Client
+from subprocess import Popen, PIPE
+import subprocess
 
+portNumber=25353
+authkey=b'pycryptoproxy'
+popenProcess=None
+androidClient=None
+USEDec=0
+initDone=False
+currentFolder=os.path.dirname(os.path.realpath(__file__))
+#python_path='C://Python2732Bit//python.exe'
+python_path='/data/data/com.googlecode.pythonforandroid/files/python/bin/python'
+#may need to provide the exports!
+#print currentFolder
+
+def init():
+#    global initDone, androidClient,USEDec,popenProcess,authkey,portNumber
+#    if initDone: return
+    initDone=True
 try:
     from Crypto.Cipher import AES
     USEDec=1 ## 1==crypto 2==local, local pycrypto
     print 'using pycrypt wooot woot'
 except:
-    print 'pycrypt not available using slow decryption'
+    print 'pycrypt not available trying other options'
     USEDec=3 ## 1==crypto 2==local, local pycrypto
-
-if not USEDec==1:
+    #check if its android
     try:
-        from Crypto.Cipher import AES
-        USEDec=1 ## 1==crypto 2==local, local pycrypto
-        print 'using internal pycrypt wooot woot'
-    except: pass    
-    
-    
+#        print 1/0
+        sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        result = sock.connect_ex(('localhost',portNumber))
+        sock.close()
+        if not result==0:
+            #run server
+            print 'android server not running, trying to run'            
+            filename=currentFolder+"/pyCryptoAndroid.py"
+            print filename
+            DETACHED_PROCESS = 0x00000008
+            env=os.environ.copy()
+            env["PYTHONPATH"]="";
+            env["PYTHONHOME"]="";
+            popenProcess=Popen([python_path,filename],shell=False,stdin=None,stdout=None,stderr=None,close_fds=True,creationflags=DETACHED_PROCESS, env=env)
+            print 'after popen'
+            sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+            result = sock.connect_ex(('localhost',portNumber))
+            print 'android server result'+str(result)
+            sock.close()
+        if result==0:            
+            print 'server is running trying to connect as client',authkey,portNumber
+            print dir(Client)
+            androidClient = Client(('localhost', portNumber),authkey=authkey)
+            androidClient.send('test')
+            print androidClient.recv()
+            USEDec=2 ## android
+            print 'using android woot woot'
+        else:
+            print 'android server not running'
+    except: 
+        print traceback.print_exc()
+        print 'local android copy not available'    
+
+print 'USEDec',USEDec
 if USEDec==1:
-    #from Crypto.Cipher import AES
+    from Crypto.Cipher import AES
     print 'using pycrypto'
 elif USEDec==2:
-    from decrypter import AESDecrypter
-    AES=AESDecrypter()
+    print 'using local android proxy'    
 else:
     from utils import python_aes
+    print 'using slow decryption'  
     
 value_unsafe = '%+&;#'
 VALUE_SAFE = ''.join(chr(c) for c in range(33, 127)
@@ -115,7 +161,7 @@ def tagDecrypt(data,key):
 #    de =AES.new(stage_4a_finalkey, AES.MODE_CBC, global_iv)
 #    # pyaes.new(stage_4a_finalkey, pyaes.MODE_CBC, IV=global_iv)
     de=getDecrypter(stage_4a_finalkey,global_iv )
-    stage_4a_finaloutput=decryptData(de,stage_4a_finaldata)
+    stage_4a_finaloutput=decryptData(de,stage_4a_finaldata,global_iv)
 #    print stage_4a_finaloutput
     stage_4a_finaloutput=stage_4a_finaloutput[4:4+16]
 #    print 'final',binascii.hexlify(stage_4a_finaloutput)
@@ -155,7 +201,7 @@ def tagDecrypt(data,key):
     if len(enc_data_todec)>0:
 #        print 'enc_data_todec',binascii.hexlify(enc_data_todec), len(enc_data_todec)
         #enc_data_remaining
-        decData=decryptData(de,enc_data_todec)
+        decData=decryptData(de,enc_data_todec,global_iv)
         
     decData+=unEncdata
 #    if len(decData)<300:
@@ -169,25 +215,50 @@ def getDecrypter(key,iv):
     global USEDec
     if USEDec==1:
         enc =AES.new(key, AES.MODE_CBC, iv)
-    else:
+    elif USEDec==3:
         ivb=array.array('B',iv)
         keyb= array.array('B',key)
         enc=python_aes.new(keyb, 2, ivb)
+    else:
+        enc = binascii.hexlify(key)+':'+binascii.hexlify(iv) # dummy return, we must be using android here
     return  enc       
 
 ## function to create the cbc decrypter    
-def decryptData(d,encdata):
+def decryptData(d,encdata,iv):
+    global androidClient
+#    print 'start'
     global USEDec
     if USEDec==1:
         data =d.decrypt(encdata)
-    else:
+    elif USEDec==3:
         chunkb=array.array('B',encdata)
         data = d.decrypt(chunkb)
         data="".join(map(chr, data))
+    else:
+        # we must be using android
+        data='decrypt:'+d#+':'+binascii.hexlify(encdata)
+        androidClient.send(data)
+        ok_msg=androidClient.recv()
+#        print ok_msg, len(encdata)
+        androidClient.send(encdata)
+        data=androidClient.recv()
+#    print 'end'
     return  data       
-
+    
+def cleanup():
+    global androidClient,popenProcess
+    try:
+        if USEDec==2 and androidClient:
+            print 'doing android cleanup'
+            androidClient.close()
+            if popenProcess:
+                popenProcess.terminate()
+            print 'android cleanup'
+    except:
+        pass
     
 #enc_data="0c0000000055e975370000ffff2cc98372afe2d8418ed47c36b7cc5b2c2f7a2f5353315f31403330393730312f6b65795f415142534c5a684350767738787a64313656564965484f47567a36764c727a37436d47644f55675a47443571563350684647637a344333727372583955473372333732625030592b00017147a7c17c3fb29ba210dd6fbb542d689ee6c1578635b7545358a260ddb808ac00000000000000000000000000000000000000003f106033e78c4842f66e12489d7d0ec974cb4780a912366394fe3eb1eaa6f1f9f7de4ed81d3ec642fe9c42c7887962b4d62f9969bbe8e1102a3bedf6f1f19fcab6f073d36801000428f96bc8"
+#byte[] arrOutput = { 0x0C, 0x00, 0x00, 0x00, 0x00, 0x55, 0xEA, 0x65, 0x7E, 0x00, 0x00, 0xFF, 0xFF, 0xE9, 0x86, 0x40, 0x1A, 0x2B, 0xDB, 0x60, 0x36, 0xEC, 0x24, 0xB3, 0x47, 0xA3, 0xF4, 0x91, 0x40, 0x2F, 0x7A, 0x2F, 0x41, 0x45, 0x54, 0x4E, 0x2D, 0x48, 0x69, 0x73, 0x74, 0x6F, 0x72, 0x79, 0x5F, 0x56, 0x4D, 0x53, 0x2F, 0x42, 0x52, 0x41, 0x4E, 0x44, 0x5F, 0x54, 0x48, 0x43, 0x5F, 0x4F, 0x43, 0x48, 0x41, 0x5F, 0x31, 0x37, 0x36, 0x38, 0x34, 0x37, 0x5F, 0x53, 0x46, 0x4D, 0x5F, 0x30, 0x30, 0x30, 0x5F, 0x32, 0x39, 0x39, 0x37, 0x5F, 0x31, 0x35, 0x5F, 0x32, 0x30, 0x31, 0x35, 0x30, 0x39, 0x30, 0x31, 0x5F, 0x30, 0x30, 0x5F, 0x53, 0x33, 0x5F, 0x2C, 0x34, 0x2C, 0x31, 0x38, 0x2C, 0x31, 0x33, 0x2C, 0x31, 0x30, 0x2C, 0x37, 0x2C, 0x32, 0x2C, 0x31, 0x2C, 0x30, 0x30, 0x2E, 0x6D, 0x70, 0x34, 0x2E, 0x63, 0x73, 0x6D, 0x69, 0x6C, 0x2F, 0x6B, 0x65, 0x79, 0x5F, 0x41, 0x51, 0x42, 0x63, 0x41, 0x54, 0x31, 0x51, 0x50, 0x68, 0x69, 0x44, 0x6B, 0x33, 0x35, 0x6C, 0x36, 0x6C, 0x56, 0x39, 0x56, 0x62, 0x54, 0x7A, 0x35, 0x56, 0x4C, 0x32, 0x31, 0x56, 0x61, 0x71, 0x76, 0x4F, 0x41, 0x38, 0x42, 0x79, 0x79, 0x32, 0x47, 0x31, 0x35, 0x68, 0x4C, 0x4D, 0x34, 0x65, 0x58, 0x48, 0x63, 0x54, 0x6D, 0x67, 0x70, 0x67, 0x7A, 0x67, 0x43, 0x5A, 0x34, 0x77, 0x44, 0x50, 0x55, 0x62, 0x6A, 0x48, 0x44, 0x5A, 0x31, 0x6E, 0x00, 0x01, 0xEF, 0x4E, 0x24, 0x89, 0x4B, 0x22, 0x08, 0x93, 0xDD, 0xD2, 0x9D, 0xA3, 0xD6, 0xBA, 0x3A, 0xB4, 0x98, 0x57, 0x84, 0x80, 0x7E, 0xD9, 0xA7, 0xA4, 0x49, 0x85, 0xCF, 0xA2, 0xAD, 0x4B, 0x22, 0xD9, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x48, 0x38, 0x73, 0xD0, 0xAB, 0x9F, 0xB7, 0x4C, 0x81, 0xEE, 0xCD, 0xD2, 0xB7, 0x87, 0xE2, 0x98, 0x96, 0xE8, 0x8A, 0x98, 0xC6, 0x4E, 0x79, 0xC9, 0x53, 0x3C, 0x8F, 0xDA, 0xDE, 0xEE, 0xF7, 0x84, 0x16, 0xC8, 0x4F, 0x75, 0xB4, 0x7B, 0x7C, 0xF8, 0x61, 0xA7, 0x2B, 0x54, 0xF3, 0x06, 0xD5, 0x3F, 0xEE, 0xDF, 0xF2, 0xD1, 0x60, 0x8F, 0x18, 0x32, 0x58, 0x01, 0x00, 0x05, 0x68, 0xE9, 0x33, 0x2C, 0x80, 0x00, 0x00, 0x01, 0x53, 0x0A, 0x00, 0x00, 0x6D, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0C, 0x00, 0x00, 0x00, 0x00, 0x55, 0xEA, 0x65, 0x7E, 0x00, 0x00, 0xFF, 0xFB, 0xE9, 0x86, 0x40, 0x1A, 0x2B, 0xDB, 0x60, 0x36, 0xEC, 0x24, 0xB3, 0x47, 0xA3, 0xF4, 0x91, 0x40, 0x01, 0x7B, 0x4C, 0x44, 0x02, 0x0B, 0xD1, 0xBD, 0x24, 0xD1, 0x15, 0x35, 0xAA, 0x24, 0x67, 0x1B, 0x89, 0xA7, 0x70, 0xB7, 0xF6, 0xF5, 0x62, 0x1E, 0xCB, 0xDA, 0x7B, 0x44, 0x77, 0x29, 0xF0, 0x42, 0x30, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xCE, 0x2E, 0x6C, 0x71, 0x3B, 0x79, 0x1D, 0x96, 0x0C, 0x49, 0x83, 0x94, 0x9A, 0xD0, 0x25, 0x0D, 0x3B, 0xD2, 0x68, 0xB7, 0xAF, 0x00, 0x11, 0x90, 0x56, 0xE5, 0x00, 0x00, 0x00, 0x00, 0x78, 0x0B, 0x00, 0x6D, 0xE3, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x0C, 0x00, 0x00, 0x00, 0x00, 0x55, 0xEA, 0x65, 0x7E, 0x00, 0x00, 0xFF, 0xFB, 0xE9, 0x86, 0x40, 0x1A, 0x2B, 0xDB, 0x60, 0x36, 0xEC, 0x24, 0xB3, 0x47, 0xA3, 0xF4 };
 #enc_data=binascii.unhexlify(enc_data)
 #enc_key="93ac1d5925eadd38f61fee4c321cc843"
 #enc_key=binascii.unhexlify(enc_key)
